--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div>
         <h3 class="float-md-start mb-0">Paul Rosa</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="index.html">Resume</a>
+          <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="resume.html">Resume</a>
           <a class="nav-link fw-bold py-1 px-0" href="#">Projects</a>
           <a class="nav-link fw-bold py-1 px-0" href="#">Contact</a>
         </nav>
